| Summary: | ASTERISK-26053: res_pjsip_outbound_publish: Crash when shutting down | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2016-05-24 05:25:11 | Date Closed: | 2016-05-25 08:40:25 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_outbound_publish |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The res_pjsip_outbound_publish module has a race condition at shutdown where an outbound publish may be shutdown twice. In this case the first succeeds as a result of the unpublish. In the second case since it's been unpublished a task is queued to just destroy the client. This task holds no ref to the publish and as a result the publish gets destroyed early. | ||
| Comments: | |||